@@ -8,6 +8,7 @@ v3.4.4 to
 - Add offset info to a message that failed to have it.
 - Ensure that VERSIONCHECK gets its required two arguments.
 - Fix version 1 industry production callback support.
+- Support Action 7/9's new GRFID/mask format.
 
 v3.4.3 to v3.4.4 (r1350)
 - Data file updates:
